--- a/index.html
+++ b/index.html
@@ -86,11 +86,14 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '533307609526517');
-fbq('track', 'PageView');
+fbq('init', '1201830830435942', {
+  em: 'email@email.com',   // Values will be hashed automatically by the pixel using SHA-256
+  ph: '1234567890',
+  ...
+});
 </script>
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=533307609526517&ev=PageView&noscript=1"
+src="https://www.facebook.com/tr?id=607769913580164&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
 <!-- /end HFCM by 99 Robots -->
@@ -220,7 +223,7 @@ src="https://www.facebook.com/tr?id=1107554624667401&ev=PageView&noscript=1"
 				</div>
 				<div class="elementor-element elementor-element-18dfe378 elementor-widget__width-initial elementor-widget-mobile__width-inherit elementor-widget elementor-widget-heading" data-id="18dfe378" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<h2 class="elementor-heading-title elementor-size-default">4,99 reales</h2>				</div>
+					<h2 class="elementor-heading-title elementor-size-default">$4,99</h2>				</div>
 				</div>
 				<div class="elementor-element elementor-element-5efa347 elementor-align-center elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="5efa347" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
@@ -412,14 +415,14 @@ src="https://www.facebook.com/tr?id=1107554624667401&ev=PageView&noscript=1"
 							<div class="elementor-divider">
 			<span class="elementor-divider-separator">
 							<span class="elementor-divider__text elementor-divider__element">
-				<span class="destaque">DESDE R$ 9,<s>90</s> POR SÓLO</span>				</span>
+				<span class="destaque">DESDE $ 9,<s>90</s> POR SÓLO</span>				</span>
 						</span>
 		</div>
 						</div>
 				</div>
 				<div class="elementor-element elementor-element-240c31bb elementor-widget__width-inherit elementor-widget-mobile__width-inherit elementor-widget elementor-widget-heading" data-id="240c31bb" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<h2 class="elementor-heading-title elementor-size-default">4,99 reales</h2>				</div>
+					<h2 class="elementor-heading-title elementor-size-default">$4,99</h2>				</div>
 				</div>
 				<div class="elementor-element elementor-element-d9a1a1c elementor-widget-mobile__width-inherit elementor-widget elementor-widget-text-editor" data-id="d9a1a1c" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
