--- a/index.html
+++ b/index.html
@@ -201,11 +201,12 @@ src="https://www.facebook.com/tr?id=1107554624667401&ev=PageView&noscript=1"
 </svg>		</div>
 				<div class="elementor-element elementor-element-34e9b168 elementor-widget__width-initial elementor-widget-tablet__width-initial elementor-widget-mobile__width-initial elementor-widget elementor-widget-heading" data-id="34e9b168" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<h1 class="elementor-heading-title elementor-size-default">¿Cansado de improvisar en las clases del ministerio infantil?</h1>				</div>
+					<h1 class="elementor-heading-title elementor-size-default">🎨 Transforma tus clases bíblicas infantiles en momentos inolvidables
+Sin perder horas preparando actividades</h1>				</div>
 				</div>
 				<div class="elementor-element elementor-element-132e37b0 elementor-widget__width-initial elementor-widget-tablet__width-initial elementor-widget-mobile__width-initial elementor-widget elementor-widget-heading" data-id="132e37b0" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<h3 class="elementor-heading-title elementor-size-default">¡Recibe más de 450 actividades bíblicas listas para imprimir!</h3>				</div>
+					<h3 class="elementor-heading-title elementor-size-default">Recibe 450 actividades bíblicas listas para imprimir, ideales para niños, maestros, ministerio infantil y padres que desean enseñar la Palabra de Dios de forma divertida.</h3>				</div>
 				</div>
 				<div class="elementor-element elementor-element-04fef1c elementor-widget elementor-widget-image" data-id="04fef1c" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
@@ -230,7 +231,7 @@ src="https://www.facebook.com/tr?id=1107554624667401&ev=PageView&noscript=1"
 									<div class="elementor-button-wrapper">
 					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-grow" href="https://pay.kiwify.com/z9uOeMz">
 						<span class="elementor-button-content-wrapper">
-									<span class="elementor-button-text">¡QUIERO MI KIT YA!</span>
+									<span class="elementor-button-text">🔘 QUIERO ACCEDER AHORA</span>
 					</span>
 					</a>
 				</div>
@@ -433,7 +434,7 @@ src="https://www.facebook.com/tr?id=1107554624667401&ev=PageView&noscript=1"
 									<div class="elementor-button-wrapper">
 					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-grow" href="https://pay.kiwify.com/z9uOeMz">
 						<span class="elementor-button-content-wrapper">
-									<span class="elementor-button-text">QUIERO COMPRAR</span>
+									<span class="elementor-button-text">🔘 QUIERO ACCEDER AHORA</span>
 					</span>
 					</a>
 				</div>
